; ModuleID = '/home/carl/AnghaBench/micropython/ports/zephyr/src/extr_zephyr_getchar.c_console_irq_input_hook.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/zephyr/src/extr_zephyr_getchar.c_console_irq_input_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@i_put = common dso_local global i32 0, align 4
@UART_BUFSIZE = common dso_local global i32 0, align 4
@i_get = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"UART buffer overflow - char dropped\0A\00", align 1
@mp_interrupt_char = common dso_local global i64 0, align 8
@uart_ringbuf = common dso_local global i64* null, align 8
@uart_sem = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @console_irq_input_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @console_irq_input_hook(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %5 = load i32, i32* @i_put, align 4
  %6 = add nsw i32 %5, 1
  %7 = load i32, i32* @UART_BUFSIZE, align 4
  %8 = sub nsw i32 %7, 1
  %9 = and i32 %6, %8
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @i_get, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 @printk(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %31

15:                                               ; preds = %1
  %16 = load i64, i64* %3, align 8
  %17 = load i64, i64* @mp_interrupt_char, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = call i32 (...) @mp_keyboard_interrupt()
  store i32 1, i32* %2, align 4
  br label %31

21:                                               ; preds = %15
  %22 = load i64, i64* %3, align 8
  %23 = load i64*, i64** @uart_ringbuf, align 8
  %24 = load i32, i32* @i_put, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i64, i64* %23, i64 %25
  store i64 %22, i64* %26, align 8
  %27 = load i32, i32* %4, align 4
  store i32 %27, i32* @i_put, align 4
  br label %28

28:                                               ; preds = %21
  %29 = call i32 @k_sem_give(i32* @uart_sem)
  %30 = call i32 (...) @k_yield()
  store i32 1, i32* %2, align 4
  br label %31

31:                                               ; preds = %28, %19, %13
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @printk(i8*) #1

declare dso_local i32 @mp_keyboard_interrupt(...) #1

declare dso_local i32 @k_sem_give(i32*) #1

declare dso_local i32 @k_yield(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
